fix: avoid image width jump when init

--- a/@antv/gatsby-theme-antv/site/components/Notification.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Notification.module.less
@@ -10,7 +10,7 @@
     display: flex;
     .number {
       height: 100%;
-      width: auto;
+      width: 44px;
     }
     .content {
       padding-left: 20px;
